
[TestDiff/creates_migration_file_from_schema_diff - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);
### conduit.sum ###
a1876bffea260abf


---

[TestDiffSplitsMigrations/splits_into_tx_and_non-tx_migration_files - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts_1.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);
### 20240115123045_add_posts_2.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

---- disable-tx ----

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);
### conduit.sum ###
47a8c2b78738c610


---

[TestDiffSplitsMigrations/should_split_into_tx_and_non-tx_files,_when_diff_contains_mixed_DDL - 1]
### conduit.sum ###
eb025fce802c9acb
### migrations/20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### migrations/20240115123045_add_posts_1.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### migrations/20240115123045_add_posts_2.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

---- disable-tx ----

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);

### schema.sql ###
CREATE TABLE users (id int);
CREATE TABLE posts (id int, user_id int);
CREATE INDEX idx_posts_user_id ON posts (user_id);

---

[TestDiff/should_create_migration_file,_when_schema_has_new_table - 1]
### conduit.sum ###
f0bcc902127233f6
### migrations/20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### migrations/20240115123045_add_posts.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### schema.sql ###
CREATE TABLE users (id int);
CREATE TABLE posts (id int, user_id int);

---

[TestDiff/should_return_error,_when_migrations_directory_does_not_exist - 1]
migrations directory not found: directory "/nonexistent" does not exist
---

[TestDiffCreatesFilePerStatement/should_split_into_tx_and_non-tx_files,_when_diff_contains_mixed_DDL - 1]
### conduit.sum ###
eb025fce802c9acb
### migrations/20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### migrations/20240115123045_add_posts_1.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

---- enable-tx ----

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### migrations/20240115123045_add_posts_2.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);

### schema.sql ###
CREATE TABLE users (id int);
CREATE TABLE posts (id int, user_id int);
CREATE INDEX idx_posts_user_id ON posts (user_id);

---

[TestDiffCreatesFilePerStatement/should_create_one_file_per_statement,_when_diff_contains_multiple_DDL - 1]
### conduit.sum ###
eb025fce802c9acb
### migrations/20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### migrations/20240115123045_add_posts_1.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### migrations/20240115123045_add_posts_2.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);

### schema.sql ###
CREATE TABLE users (id int);
CREATE TABLE posts (id int, user_id int);
CREATE INDEX idx_posts_user_id ON posts (user_id);

---

[TestDiff/should_use_zero-padded_filenames,_when_diff_produces_10_or_more_migration_files - 1]
### conduit.sum ###
493e2f35b90260f3
### migrations/20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### migrations/20240115123045_add_posts_01.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "col_a" integer,
    "col_b" integer,
    "col_c" integer,
    "col_d" integer,
    "col_e" integer,
    "col_f" integer,
    "col_g" integer,
    "col_h" integer,
    "col_i" integer
);

### migrations/20240115123045_add_posts_02.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_a_idx ON public.posts USING btree (col_a);

### migrations/20240115123045_add_posts_03.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_b_idx ON public.posts USING btree (col_b);

### migrations/20240115123045_add_posts_04.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_c_idx ON public.posts USING btree (col_c);

### migrations/20240115123045_add_posts_05.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_d_idx ON public.posts USING btree (col_d);

### migrations/20240115123045_add_posts_06.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_e_idx ON public.posts USING btree (col_e);

### migrations/20240115123045_add_posts_07.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_f_idx ON public.posts USING btree (col_f);

### migrations/20240115123045_add_posts_08.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_g_idx ON public.posts USING btree (col_g);

### migrations/20240115123045_add_posts_09.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_h_idx ON public.posts USING btree (col_h);

### migrations/20240115123045_add_posts_10.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: /testdir/schema.sql

SET statement_timeout = '1200000ms';
SET lock_timeout = '3000ms';

CREATE INDEX CONCURRENTLY posts_col_i_idx ON public.posts USING btree (col_i);

### schema.sql ###
CREATE TABLE users (id int);
CREATE TABLE posts (
    id    int,
    col_a int,
    col_b int,
    col_c int,
    col_d int,
    col_e int,
    col_f int,
    col_g int,
    col_h int,
    col_i int
);
CREATE INDEX ON posts(col_a);
CREATE INDEX ON posts(col_b);
CREATE INDEX ON posts(col_c);
CREATE INDEX ON posts(col_d);
CREATE INDEX ON posts(col_e);
CREATE INDEX ON posts(col_f);
CREATE INDEX ON posts(col_g);
CREATE INDEX ON posts(col_h);
CREATE INDEX ON posts(col_i);

---
